<resources>
    <string name="app_name">CoronaAlert</string>
    <string name="title_activity_informe_geolocalizacion">Informe GeoPosición</string>
    <string name="Btn_Inicio_Sesion">Ingresar</string>
    <string name="Btn2_Inicio_Sesion">Registrarme</string>
    <string name="title_activity_panel_noti_covid">Panel_noti_covid</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="police_stations_url">https://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="police_stations">Prueba Datos</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registro_diario">Registro Diario</string>
    <string name="ingrese_su_estado_de_salud_hoy">Ingrese su estado de salud hoy:</string>
    <string name="seleccione_fecha_de_diagn_stico">Seleccione fecha de diagnóstico</string>
    <string name="fecha">Fecha</string>
    <string name="registrar_informaci_n">REGISTRAR INFORMACIÓN</string>
    <string name="pregunta_uno">¿Usted siente algunos de los síntomas asociados con el COVID-19 (Fiebre, dolor de cabeza, malestar general,síntomas pulmonares)?</string>
    <string name="pregunta_dos">Eres positivo para COVID-19?</string>
    <string name="no_si">NO/SI</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="coronaalert">CoronaAlert</string>
    <string name="imagen_coronaalert">Imagen CoronaAlert</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="logocoronaalert">LogoCoronaAlert</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="men_principal">Menú Principal</string>
    <string name="registro_diario_t_boton">Registro Diario</string>
    <string name="informe_geoposici_n_b_ig">Informe Geoposición</string>
    <string name="noticias_t_bN">Noticias</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="mensaje_principal">Haz aquí tu registro diario de sintomas y consulta el informe de geoposición, para cuidarte a tí y tus familiares.</string>
    <string name="boton_cerrar">Boton Cerrar</string>
    <string name="boton_noticias">Boton Noticias</string>
    <string name="boton_geoposicion">Boton Geoposicion</string>
    <string name="boton_registro_diario">Boton Registro Diario</string>
    <string name="enviar_boton">ENVIAR</string>
    <string name="cancelar_boton">CANCELAR</string>
    <string name="logo_RC">Logo</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="correo_recuperar_cont">Correo</string>
    <string name="ingresa_correo_de_recuperaci_n">Ingresa correo de recuperación:</string>
    <string name="reg_strese_aqu">Regístrese aquí</string>
    <string name="tipo_de_identificaci_n">Tipo de Identificación:</string>
    <string name="numero_de_identificaci_n">Numero de identificación:</string>
    <string name="nombres_ru">Nombres:</string>
    <string name="apellidos_ru">Apellidos:</string>
    <string name="correo_electr_nico">Correo Electrónico:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="g_nero_ru">Género:</string>
    <string name="personas_con_que_vive"># Personas con que vive:</string>
    <string name="tipo_de_sangre">Tipo de sangre:</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña:</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña:</string>
    <string name="acepto_los_t_rminos_y_pol_ticia_de_privacidad">Acepto los términos y políticia de privacidad</string>
    <string name="registrarse">Registrarse</string>
    <string name="texto_geoposicion">Desplácese por el mapa de Bogotá y observe las zonas donde se encuentra la población afectada con Covid-19.</string>
    <string name="informe_geoposici_n">Informe GeoPosición</string>
    <string name="activar_mapa_de_calor">Activar mapa de calor</string>
    <string name="tama_o">Tamaño</string>
    <string name="color_geo">Color</string>
    <string name="opacidad">Opacidad</string>
</resources>
