<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewTituloMP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/men_principal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <ImageView
        android:id="@+id/imageViewRegistroDiario"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/boton_registro_diario"
        android:onClick="onClickRegistro_Diario"
        android:tint="#00e676"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMensajePrincipal"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/ic_registro_diario" />

    <ImageView
        android:id="@+id/imageViewInformeGeo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/boton_geoposicion"
        android:onClick="onClickInforme"
        android:tint="#f57f17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMensajePrincipal"
        app:layout_constraintVertical_bias="0.391"
        app:srcCompat="@drawable/ic_geoposicion" />

    <ImageView
        android:id="@+id/imageViewCerrar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/boton_cerrar"
        android:onClick="onClickCerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloBIG"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/ic_baseline_power_settings_new_24" />

    <TextView
        android:id="@+id/textViewTituloBTRD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_diario_t_boton"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegistroDiario"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textViewTituloBIG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_geoposici_n_b_ig"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewInformeGeo"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/textViewTituloBC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCerrar"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textViewMensajePrincipal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_principal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloMP"
        app:layout_constraintVertical_bias="0.026" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTituloMP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:foregroundGravity="bottom"
            android:foregroundTint="@color/colorPrimaryDark">


            <ImageView
                android:id="@+id/imageViewCoronaAlertMA"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/imagen_coronaalert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.019"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iconop"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textViewCoronaAlertMA"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/quicksand"
                android:text="@string/coronaalert"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"

                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.166"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textViewNombreMA"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/quicksand"

                android:textAlignment="center"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.648"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.844"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>